its test suite.


.. _release-notes-2.19:

2.19
====

This release includes the following new features:

- Added support for automatic AWS credentials retrieval when AWS KMS is used for
  client side encryption.
- Added support for automatic GCP credentials retrieval when Google Cloud Key
  Management is used for client side encryption.


.. _release-notes-2.18:

2.18
====

This release of the Ruby driver supports MongoDB version 5.2 and 6.0.

This release includes the following new features:

- Added support for `queryable encryption <https://www.mongodb.com/docs/upcoming/core/queryable-encryption/queryable-encryption/>`_.
- Added support for Azure Key Vault, Google Cloud Key Management, and any
  KMIP compliant Key Management System to be used as master key storage for
  client side encryption.
- It is now possible to provide the :ref:`path to a schema map file <schema-map-path>`
  instead of the entire schema map as an object.
- The driver now implements the :ref:`feature flag <feature-flags>` mechanism
  for incompatible changes and bug fixes. Changes gated behind feature flags
  for 2.18 are passing view filter and options to ``aggregate`` and validation
  of correct usage of ``update`` vs ``replace`` methods, as described below.
- Added the ``validate_update_replace`` feature flag which validates the
  parameters to update and replace operations. If this flag is turned on, an
  error will be raised on an invalid update or replacement document.
- Added the ``broken_view_options`` feature flag which allows the view options
  to be correctly propagated to the ``aggregate``, ``count``, ``count_documents``,
  ``distinct``, and ``estimated_document_count`` mehods. When this flag is
  switched on, the view options will be ignored in those methods.
- The driver now permits :ref:`inserting documents with dollar-prefixed and
  dotted keys <dots-dollars-in-field-names>`.
- CRUD methods, methods for listing databases, collection, and indexes management