@@ -1,0 +1,1 @@
+../.mod/drivers-evergreen-tools/.evergreen/auth_aws
