@@ -125,6 +125,10 @@ axes:
         display_name: AWS Auth ECS Task
         variables:
           AUTH: aws-ecs
+      - id: aws-web-identity
+        display_name: AWS Auth Web Identity Task
+        variables:
+          AUTH: aws-web-identity
 
   - id: "ruby"
     display_name: Ruby Version
