@@ -541,7 +541,7 @@ buildvariants:
 
   - matrix_name: aws-auth-temporary
     matrix_spec:
-      auth-and-ssl: [aws-assume-role, aws-ec2, aws-ecs]
+      auth-and-ssl: [aws-assume-role, aws-ec2, aws-ecs, aws-web-identity]
       ruby: [ruby-3.1]
       topology: standalone
       mongodb-version: '4.4'
