@@ -24,7 +24,7 @@ module Mongo
       # @api private
       class CredentialsNotFound < Mongo::Error::AuthError
         def initialize
-          super("Could not locate AWS credentials (checked Client URI and Ruby options, environment variables, ECS and EC2 metadata)")
+          super("Could not locate AWS credentials (checked Client URI and Ruby options, environment variables, ECS and EC2 metadata, and Web Identity)")
         end
       end
 
@@ -36,6 +36,7 @@ module Mongo
       # - AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_SESSION_TOKEN
       #   environment variables (commonly used by AWS SDKs and various tools,
       #   as well as AWS Lambda)
+      # - AssumeRoleWithWebIdentity API call
       # - EC2 metadata endpoint
       # - ECS metadata endpoint
       #
@@ -92,6 +93,12 @@ module Mongo
           )
 
           if credentials_valid?(credentials, 'environment variables')
+            return credentials
+          end
+
+          credentials = web_identity_credentials
+
+          if credentials && credentials_valid?(credentials, 'Web identity token')
             return credentials
           end
 
@@ -186,6 +193,100 @@ module Mongo
           )
         rescue ::Timeout::Error, IOError, SystemCallError
           return nil
+        end
+
+        # Returns credentials associated with web identity token that is
+        # stored in a file. This authentication mechanism is used to authenticate
+        # inside EKS. See https://docs.aws.amazon.com/eks/latest/userguide/iam-roles-for-service-accounts.html
+        # for further details.
+        #
+        # @return [ Auth::Aws::Credentials | nil ] A set of credentials, or nil
+        #   if retrieval failed.
+        def web_identity_credentials
+          web_identity_token, role_arn, role_session_name = prepare_web_identity_inputs
+          return nil if web_identity_token.nil?
+          response = request_web_identity_credentials(
+            web_identity_token, role_arn, role_session_name
+          )
+          return if response.nil?
+          credentials_from_web_identity_response(response)
+        end
+
+        # Returns inputs for the AssumeRoleWithWebIdentity AWS API call.
+        #
+        # @return [ Array<String | nil, String | nil, String | nil> ] Web
+        #   identity token, role arn, and role session name.
+        def prepare_web_identity_inputs
+          token_file = ENV['AWS_WEB_IDENTITY_TOKEN_FILE']
+          role_arn = ENV['AWS_ROLE_ARN']
+          if token_file.nil? || role_arn.nil?
+            return nil
+          end
+          web_identity_token = File.open(token_file).read
+          role_session_name = ENV['AWS_ROLE_SESSION_NAME']
+          if role_session_name.nil?
+            role_session_name = "ruby-app-#{SecureRandom.alphanumeric(50)}"
+          end
+          [web_identity_token, role_arn, role_session_name]
+        rescue Errno::ENOENT, IOError, SystemCallError
+          nil
+        end
+
+        # Calls AssumeRoleWithWebIdentity to obtain credentials for the
+        # given web identity token.
+        #
+        # @param [ String ] token The OAuth 2.0 access token or
+        #   OpenID Connect ID token that is provided by the identity provider.
+        # @param [ String ] role_arn The Amazon Resource Name (ARN) of the role
+        #   that the caller is assuming.
+        # @param [ String ] role_session_name An identifier for the assumed
+        #   role session.
+        #
+        # @return [ Net::HTTPResponse | nil ] AWS API response if successful,
+        #   otherwise nil.
+        def request_web_identity_credentials(token, role_arn, role_session_name)
+          uri = URI('https://sts.amazonaws.com/')
+          params = {
+            'Action' => 'AssumeRoleWithWebIdentity',
+            'Version' => '2011-06-15',
+            'RoleArn' => role_arn,
+            'WebIdentityToken' => token,
+            'RoleSessionName' => role_session_name
+          }
+          uri.query = ::URI.encode_www_form(params)
+          req = Net::HTTP::Post.new(uri)
+          req['Accept'] = 'application/json'
+          resp = Net::HTTP.start(uri.hostname, uri.port, use_ssl: true) do |https|
+            https.request(req)
+          end
+          if resp.code != '200'
+            return nil
+          end
+          resp
+        rescue Errno::ENOENT, IOError, SystemCallError
+          nil
+        end
+
+        # Extracts credentials from AssumeRoleWithWebIdentity response.
+        #
+        # @param [ Net::HTTPResponse ] response AssumeRoleWithWebIdentity
+        #   call response.
+        #
+        # @return [ Auth::Aws::Credentials | nil ] A set of credentials, or nil
+        #   if response parsing failed.
+        def credentials_from_web_identity_response(response)
+          payload = JSON.parse(response.body).dig(
+            'AssumeRoleWithWebIdentityResponse',
+            'AssumeRoleWithWebIdentityResult',
+            'Credentials'
+          ) || {}
+          Credentials.new(
+            payload['AccessKeyId'],
+            payload['SecretAccessKey'],
+            payload['SessionToken'],
+          )
+        rescue JSON::ParserError
+          nil
         end
 
         def http_get(http, uri, metadata_token)
